# memtomem

./: .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: cla-check.py  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  cla.yml  release-opencode-plugin.yml  release-sbom.yml  release.yml  stale.yml
docs/adr/: 0001-context-gateway-sync-policies.md  0002-mem-add-blockquote-tags.md  0005-force-reindex-metadata-contract.md  0006-web-ui-folder-upload-redaction.md  0007-namespace-crud-prod-exposure.md  0008-wiki-layer.md  0009-context-gateway-dashboard-info-surface.md  0010-settings-hooks-target-scope.md  0011-canonical-artifact-scope-hierarchy.md  0012-context-gateway-scope-vocabulary.md  0012-cross-db-memory-migration.md  0015-context-gateway-scope-vocabulary.md  0016-three-tier-canonical-context-store.md  0017-target-tier-identifier-rename.md  0018-multi-runtime-hook-fanout.md  0019-hook-rule-ownership-marker.md  0020-memory-index-write-contract.md  0021-context-portal.md  0022-canonical-artifact-version-snapshots.md  0023-cross-project-artifact-transfer.md  0024-sync-all-per-phase.md  0025-cross-project-sync-orchestration.md  0026-context-gateway-onboarding-ia.md  0027-in-browser-wiki-editor.md  0028-per-project-agent-team-namespaces.md  0029-mcp-network-transport-auth-stance.md  0030-explicit-preview-pull.md  TRACKER.md
docs/guides/: README.md  agent-context.md  agent-memory-guide.md  cloud-sync.md  configuration.md  context-gateway.md  embeddings.md  getting-started.md  google-drive.md  hands-on-tutorial.md  hooks.md  llm-providers.md  mcp-clients.md  multi-device-sync.md  pinned-context.md  reference.md  stm-guide.md  uninstall.md  use-cases.md  user-guide.md  vibe-coding-getting-started-ko.md  web-ui.md
docs/planning/: b2-v2-design.md  b2-v2-handoff.md  b2-v2-phase1-validation.md  b2-v2-phase2b-ledger.md  b2-v2-query-portfolio.md
signatures/v1/: cla.json
tests/: test_llm_utils.py
tools/: bandit-baseline.json  check_osv_exceptions.py  check_vendored_advisories.py  chunk_metrics.py  chunking_smoke.py  osv-exceptions.toml  release_preflight.py  release_sbom.py  render_plugin_assets.py  run_pytest_shard.py  vendored_advisory_ignore.toml
(+72 files in other folders)
