[project]
name = "memtomem-workspace"
version = "0.1.0"
description = "memtomem — Markdown-first memory infrastructure for AI agents"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
# Security floors for transitive deps flagged by OSV (#1331). Each is capped to
# its current major (starlette to its current minor — we import starlette.* in
# web/) so this stays a *minimal* security bump: routine version upgrades are
# Dependabot's job (#1336). uv only honors these from the workspace root.
constraint-dependencies = [
    "cryptography>=46.0.7,<47",  # PYSEC-2026-36 / GHSA-p423-j2cm-9vmq (CVSS 9.8)
    "idna>=3.15,<4",             # GHSA-65pc-fj4g-8rjx
    "pyjwt>=2.13.0,<3",          # PYSEC-2026-175 / -177 / -178 / -179
    "python-multipart>=0.0.27,<1",  # GHSA-mj87-hwqh-73pj / GHSA-pp6c-gr5w-3c5g
    "starlette>=1.0.1,<1.1",     # PYSEC-2026-161 / GHSA-86qp-5c8j-p5mr
    "urllib3>=2.7.0,<3",         # PYSEC-2026-141 / -142 / GHSA-mf9v-mfxr-j63j / GHSA-qccp-gfcp-xxvc
]

[tool.uv.workspace]
members = ["packages/memtomem"]

[tool.uv.sources]
memtomem = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"packages/memtomem/src/memtomem/server/__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/memtomem/tests"]
markers = [
    "ollama: requires a running Ollama instance (auto-skipped when unavailable)",
    "llm: requires a live LLM API key (OpenAI/Anthropic); CI runs these in the nightly job only",
    "multilingual: multilingual/large-corpus regression tests (runs in the test-golden-path CI job)",
    "requires_symlinks: needs a filesystem that can create symlinks (auto-skipped on Windows without Developer Mode/admin)",
    "browser: requires pytest-playwright + a Chromium install (auto-skipped when unavailable)",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["has-type", "attr-defined"]

[dependency-groups]
dev = [
    "memtomem[all]",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-playwright>=0.5",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML>=6.0",
]
